--- a/css/style.scss
+++ b/css/style.scss
@@ -27,46 +27,123 @@ section#record {
     width: 100%;
     background: #eee;
     box-sizing: border-box;
-    padding: 0 8px 11px;
+    padding: 10px 68px 11px 60px;
     overflow: auto;
-    font-size: 22px;
-    a{
-        text-decoration: none;
-        color: black;
-        &:link{
-            color: black;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    .dialog{
+        max-width: 80%;
+        height: auto;
+        background: #fff;
+        border-radius: 5px;
+        margin: 10px 0;
+        padding: 10px;
+        box-sizing: border-box;
+        position: relative;
+    }
+    .user{
+        align-self: flex-end;
+        margin-right: 10px;
+        &::before{
+            content: '';
+            position: absolute;
+            top: 10px;
+            left: 100%;
+            border-left: 10px solid #fff;
+            border-bottom: 10px solid transparent;
+            border-top: 10px solid transparent;
         }
-        &:visited{
-            color: black;
+        &::after{
+            content: '';
+            height: 40px;
+            width: 40px;
+            background: url(../img/user.png) no-repeat center center;
+            background-size: 100% 100%;
+            position: absolute;
+            left: 100%;
+            top: 0;
+            transform: translateX(16px);
         }
-        &:hover{
-            color: black;
+    }
+    .robot{
+        align-self: flex-start;
+        margin-left: 10px;
+        &::before{
+            content: '';
+            position: absolute;
+            top: 10px;
+            left: -10px;
+            border-right: 10px solid #fff;
+            border-bottom: 10px solid transparent;
+            border-top: 10px solid transparent;
         }
-        &:active{
-            color: black;
+        &::after{
+            content: '';
+            height: 40px;
+            width: 40px;
+            background: url(../img/robot.png) no-repeat center center;
+            background-size: 100% 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            transform: translateX(-56px);
         }
-        dl{
-            height: 100px;
-            padding: 10px;
-            box-sizing: border-box;
-            dt{
-                float: left;
-                width: 37%;
-                height: 100%;
-                background-position: center center;
-                background-size: 100% 100%;
+        ul{
+            
+            li{
+                list-style: none;
+                margin: 5px 0;
+                a{
+                    text-decoration: none;
+                    color: black;
+                    &:link{
+                        color: black;
+                    }
+                    &:visited{
+                        color: black;
+                    }
+                    &:hover{
+                        color: black;
+                    }
+                    &:active{
+                        color: black;
+                    }
+                    dl{
+                        box-sizing: border-box;
+                        display: flex;
+                        dt{
+                            flex-shrink: 0;
+                            flex-grow: 0;
+                            width: 56px;
+                            height: 56px;
+                            background-position: center center;
+                            background-size: 100% 100%;
+                        }
+                        dd{
+                            flex-shrink: 1;
+                            flex-grow: 1;
+                            height: 56px;
+                            width: 126px;
+                            padding-left: 10px;
+                            box-sizing: border-box;
+                            display: flex;
+                            flex-direction: column;
+                            justify-content: space-between;
+                            h4 {
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;                                
+                            }
+                            p{
+                                font-size: 12px;
+                            }
+                        }
+                    }
+                }
             }
-            dd{
-                height: 100%;
-                padding-left: 5%;
-                box-sizing: border-box;
-                width: 63%;
-                float: left;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-around;
-            }
         }
+        
     }
 }
 
